@@ -1436,15 +1436,18 @@ void WorldServer::Process() {
 			if(zone)
 			{
 				ServerQGlobalUpdate_Struct *qgu = (ServerQGlobalUpdate_Struct*)pack->pBuffer;
-				QGlobal temp;
-				temp.npc_id = qgu->npc_id;
-				temp.char_id = qgu->char_id;
-				temp.zone_id = qgu->zone_id;
-				temp.expdate = qgu->expdate;
-				temp.name.assign(qgu->name);
-				temp.value.assign(qgu->value);
-				entity_list.UpdateQGlobal(qgu->id, temp);
-				zone->UpdateQGlobal(qgu->id, temp);
+				if(qgu->from_zone_id != zone->GetZoneID() || qgu->from_instance_id != zone->GetInstanceID())
+				{
+					QGlobal temp;
+					temp.npc_id = qgu->npc_id;
+					temp.char_id = qgu->char_id;
+					temp.zone_id = qgu->zone_id;
+					temp.expdate = qgu->expdate;
+					temp.name.assign(qgu->name);
+					temp.value.assign(qgu->value);
+					entity_list.UpdateQGlobal(qgu->id, temp);
+					zone->UpdateQGlobal(qgu->id, temp);
+				}
 			}
 			break;
 		}
@@ -1459,8 +1462,11 @@ void WorldServer::Process() {
 			if(zone)
 			{
 				ServerQGlobalDelete_Struct *qgd = (ServerQGlobalDelete_Struct*)pack->pBuffer;
-				entity_list.DeleteQGlobal(std::string((char*)qgd->name), qgd->npc_id, qgd->char_id, qgd->zone_id);
-				zone->DeleteQGlobal(std::string((char*)qgd->name), qgd->npc_id, qgd->char_id, qgd->zone_id);
+				if(qgd->from_zone_id != zone->GetZoneID() || qgd->from_instance_id != zone->GetInstanceID())
+				{
+					entity_list.DeleteQGlobal(std::string((char*)qgd->name), qgd->npc_id, qgd->char_id, qgd->zone_id);
+					zone->DeleteQGlobal(std::string((char*)qgd->name), qgd->npc_id, qgd->char_id, qgd->zone_id);
+				}
 			}
 			break;
 		}
